# OpenGL_Projects

./: CMakeLists.txt  LICENSE  README.md
BasicLightingDiffuse/: main.cpp
BasicLightingSpecular/: main.cpp
Camera/: main.cpp
Colors/: main.cpp
FirstTriangle/: main.cpp
LightingMaps/: main.cpp
Materials/: main.cpp
OglPlaygroundApp/: Basic.shader  CMakeLists.txt  Common.cpp  Common.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  header.h  main.cpp  src.cpp
Shaders/: main.cpp
Texture/: main.cpp
Transformation/: main.cpp
WindowCreation/: CMakeLists.txt  main.cpp
WindowCreation/dependencies/GLAD/src/: glad.c
dependencies/GLAD/include/glad/: glad.h
