cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
project(OglPlaygroud)
set(CMAKE_CXX_STANDARD 11)

#find_package(glfw3 3.2 REQUIRED)
find_package(OpenGL REQUIRED)

set(SRC main.cpp)
set(HEADER )
set(SHADER_SRC Basic.shader)
source_group("Shader Files" FILES ${SHADER_SRC})
link_directories(./dependencies/GLFW/lib-vc2015 ./dependencies/GLEW/lib/Release/x64)
set(GLFW_LIB glfw3)
set(GLEW_LIB glew32s)
#add_compile_definitions(GLEW_STATIC)
add_definitions(-DGLEW_STATIC)

add_executable(OglPlayground ${SRC} ${HEADER} ${SHADER_SRC})
target_include_directories(OglPlayground PUBLIC ${OPENGL_INCLUDE_DIR} ./dependencies/GLFW/include ./dependencies/GLEW/include)
target_link_libraries(OglPlayground ${OPENGL_gl_LIBRARY} ${GLFW_LIB} ${GLEW_LIB})