cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
project(OglPlaygroud)
set(CMAKE_CXX_STANDARD 11)

find_package(OpenGL REQUIRED)

set(SRC main.cpp Renderer.cpp Texture.cpp VertexBuffer.cpp IndexBuffer.cpp VertexArray.cpp VertexBufferLayout.cpp Common.cpp Shader.cpp)
set(HEADER Renderer.h Texture.h VertexBuffer.h IndexBuffer.h VertexArray.h VertexBufferLayout.h Shader.h Common.h stb_image.h)
set(SHADER_SRC Basic.shader)
source_group("Shader Files" FILES ${SHADER_SRC})
link_directories(./dependencies/GLFW/lib-vc2015 ./dependencies/GLEW/lib/Release/x64)
set(GLFW_LIB glfw3)
set(GLEW_LIB glew32s)
set(GLM_INCLUDE ./dependencies/glm)
source_group(TREE ${GLM_INCLUDE} PREFIX glm)
#add_compile_definitions(GLEW_STATIC)
add_definitions(-DGLEW_STATIC)

add_executable(OglPlayground ${SRC} ${HEADER} ${SHADER_SRC})
target_include_directories(OglPlayground PUBLIC ${OPENGL_INCLUDE_DIR} ${GLM_INCLUDE} ./dependencies/GLFW/include ./dependencies/GLEW/include ./)
target_link_libraries(OglPlayground ${OPENGL_gl_LIBRARY} ${GLFW_LIB} ${GLEW_LIB})